--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    apply from: 'config/CustomTest.gradle'
     ext.kotlin_version = "1.4.32"
     repositories {
         google()
