--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ greeting{
 }
 
 dependencies {
-
+    implementation fileTree(dir: "libs", include: ["*.jar"],includes: ["*.aar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
