--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.example.myplugin:library:1.0"
-        classpath "com.example.greeting:library:1.0"
+//        classpath "com.example.myplugin:library:1.0"
+//        classpath "com.example.greeting:library:1.0"
+        classpath "com.example.buildtimecost:library:1.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
