--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
 //    id 'com.example.myplugin'
 //    id 'com.example.greeting'
-    id 'com.example.buildtimecost'
+//    id 'com.example.buildtimecost'
 }
 
 android {
@@ -39,10 +39,12 @@ android {
     message = "qwe"
 }*/
 
+/*
 taskExecTime {
     threshold 100
     sorted true
 }
+*/
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"],includes: ["*.aar"])
