--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     apply from: 'config/CustomTest.gradle'
     ext.kotlin_version = "1.4.32"
+    ext.isUsePlugin = true
     repositories {
         google()
         jcenter()
