--- a/testThread/build.gradle
+++ b/testThread/build.gradle
@@ -1,9 +1,6 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
-//    id 'com.example.myplugin'
-//    id 'com.example.greeting'
-//    id 'com.example.buildtimecost'
 }
 
 android {
@@ -11,13 +8,13 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.plugin"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -35,25 +32,12 @@ android {
     }
 }
 
-/*greeting{
-    message = "qwe"
-}*/
-
-/*
-taskExecTime {
-    threshold 100
-    sorted true
-}
-*/
-
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"],includes: ["*.aar"])
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation project(path: ':testThread')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
