--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
+    apply from: 'config/CustomTest.gradle'
+    ext {
+        isUsePlugin = true
+        kotlin_version = "1.4.32"
+        buildToolsVersion = "30.0.2"
+        androidxAnnotationVersion = "1.1.0"
+        robolectricVersion = "4.5.1"
+        guavaVersion = "29.0-android"
+        extTruthVersion = '1.3.0-rc01'
+        coreVersion = "1.4.0-beta01"
+        extJUnitVersion = "1.1.3-beta01"
+        runnerVersion = "1.4.0-beta01"
+        espressoVersion = "3.4.0-beta01"
+        activityVersion = '1.1.0'
+        appCompatVersion = '1.2.0'
+        constraintLayoutVersion = '2.0.2'
+        coreTestingVersion = '2.1.0'
+        coroutines = '1.3.9'
+        lifecycleVersion = '2.2.0'
+        materialVersion = '1.2.1'
+        roomVersion = '2.2.5'
+        // testing
+        junitVersion = '4.13.1'
+        espressoVersion = '3.1.0'
+        androidxJunitVersion = '1.1.2'
+        rulesVersion = "1.4.0"
+    }
+
     repositories {
         google()
         jcenter()
@@ -9,9 +36,11 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.example.myplugin:library:1.0"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+//        classpath "com.example.myplugin:library:1.0"
+//        classpath "com.example.greeting:library:1.0"
+//        classpath "com.example.buildtimecost:library:1.0"
+
+
     }
 }
 
