testwork resource example

--- a/testwork/build.gradle
+++ b/testwork/build.gradle
@@ -41,11 +41,11 @@ dependencies {
     implementation 'androidx.annotation:annotation:' + rootProject.androidxAnnotationVersion
     implementation 'com.google.guava:guava:' + rootProject.guavaVersion
 
-
     // Testing-only dependencies
     androidTestImplementation 'androidx.test:core:' + rootProject.coreVersion
     androidTestImplementation 'androidx.test.ext:junit:' + rootProject.extJUnitVersion
     androidTestImplementation 'androidx.test:runner:' + rootProject.runnerVersion
     androidTestImplementation 'androidx.test:rules:' + rootProject.rulesVersion
-
+    // Note that espresso-idling-resource is used in the code under test.
+    implementation 'androidx.test.espresso:espresso-idling-resource:' + rootProject.espressoVersion
 }
