--- a/testwork/src/main/AndroidManifest.xml
+++ b/testwork/src/main/AndroidManifest.xml
@@ -9,13 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Plugin">
-        <activity android:name=".MainActivity">
+        <activity android:name=".morewindow.SuggestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".moreProcess.DefaultProcessActivity" />
+        <activity android:name=".moreProcess.PrivateProcessActivity" />
+        <activity android:name=".resourceSimple.ResourceSimpleActivity" />
+        <activity android:name=".calculator.CalculatorActivity" />
+        <activity android:name=".basicSimiple.BasicSimpleActivity" />
+        <activity android:name=".basicSimiple.ShowTextActivity" />
+        <activity android:name=".advanceSimple.ImageViewerActivity" />
     </application>
 
 </manifest>
